# rpi-pico-display-temp

./: .gitignore  CMakeLists.txt  README.md  adt7410.c  adt7410.h  config.h  i2c_util.c  i2c_util.h  main.c  so1602a.c  so1602a.h
